# langchain-session

./: .env  Prerequisites.md  README.md  Workshop.md  pyproject.toml
1-SimpleChain/: README.md  simple.py
2-RAG/: ingestion.py  mediumblog1.txt  search.py
3-icebreaker/: ice_breaker.py
3-icebreaker/agents/: linkedin_lookup_agent.py
